# mirage-riscv

./: Makefile  README.md  _tags  choose_compartment_strategy.sh  commands_verbose_c_stubs.txt  dune-project  mirage-riscv.opam  opam
c_stubs/: Makefile
compartment_allocations/: Makefile
compartment_allocations/asm_files/lib-c/: alloc_pages_stubs.s  atomic_stubs.s  barrier_stubs.s  checksum_stubs.s  clock_stubs.s  cstruct_stubs.s  main.s  mm_stubs.s  riscv_console_stubs.s
compartment_allocations/asm_files/lib-ocaml/: lifecycle.s  mM.s  main.s  time.s
compartment_allocations/default_cap_files/lib-c/: alloc_pages_stubs.cap  atomic_stubs.cap  barrier_stubs.cap  checksum_stubs.cap  clock_stubs.cap  main.cap  mm_stubs.cap  riscv_console_stubs.cap
compartment_allocations/default_cap_files/lib-ocaml/: lifecycle_cap_tee.ml  mM_cap_tee.ml  main_cap_tee.ml  time_cap_tee.ml
compartment_allocations/strategy_1/lib-c/: alloc_pages_stubs.cap  atomic_stubs.cap  barrier_stubs.cap  checksum_stubs.cap  clock_stubs.cap  cstruct_stubs.cap  main.cap  mm_stubs.cap  riscv_console_stubs.cap
compartment_allocations/strategy_1/lib-ocaml/: lifecycle_cap_tee.ml  mM_cap_tee.ml  main_cap_tee.ml  time_cap_tee.ml
lib/: dune  libmirage-riscv_bindings.txt  lifecycle.ml  main.ml  oS.ml  oS.mli  time.ml
lib/bindings/: Makefile  barrier_stubs.c  checksum_stubs.c  clock_stubs.c  cstruct_stubs.c  main.c  mirage-riscv.pc  mirage-solo5.pc  mm_stubs.c  riscv_console_stubs.c
pkg/: META  pkg.ml
